<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:id="@+id/notification"
        android:key="@string/pref_notification_key"
        android:title="@string/pref_notification_title"
        android:summary="@string/pref_notification_summary"
        android:defaultValue="false"
        app:iconSpaceReserved="false"/>

    <ListPreference
        android:id="@+id/order_by"
        android:key="@string/pref_sort_key"
        android:title="@string/pref_sort_title"
        android:summary="@string/pref_sort_summary"
        android:dialogTitle="@string/pref_sort_dialog_title"
        android:entries="@array/sort_oder"
        android:entryValues="@array/sort_oder_value"
        android:defaultValue="@string/pref_default_sort_value"
        app:iconSpaceReserved="false" />

</PreferenceScreen>