<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.google.developers.teapot.MainActivity">
    <item
        android:id="@+id/action_add"
        android:title="@string/menu_action_show_timer"
        android:icon="@drawable/ic_add_circle"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_timer"
        android:title="@string/menu_action_show_timer"
        android:icon="@drawable/ic_timer_light"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_list"
        android:title="@string/menu_action_show_list"
        android:icon="@drawable/ic_list"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_action_settings"
        app:showAsAction="never" />
</menu>